# rok-mnd-prompt-comp-2026

./: .gitignore  CLAUDE.md  README.md  build.js  cspell.json  flow.html  plan.md  ruff.toml
data/: README.md  ground_truth.csv  private.csv  sample.csv
defense-prompt-grader/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
defense-prompt-grader/api/: __init__.py  main.py  store.py
defense-prompt-grader/baselines/: P0.txt  P1.txt  P2.txt  README.md
defense-prompt-grader/grader/: __init__.py  __main__.py  cache.py  config.py  data.py  llm.py  parse.py  runner.py  score.py  template.py
defense-prompt-grader/tests/: test_api.py  test_llm.py  test_parse.py  test_runner.py  test_score.py
defense-prompt-grader/web/: index.html  package-lock.json  package.json  vite.config.ts
defense-prompt-grader/web/src/: App.tsx  api.ts  index.css  types.ts  ui.tsx
defense-prompt-grader/web/src/lib/: format.ts
defense-prompt-grader/web/src/views/: Detail.tsx  Leaderboard.tsx  Ops.tsx  Submit.tsx
defense-prompt-grader/web/src/views/info/: Data.tsx  Description.tsx  Evaluation.tsx  Rules.tsx  shared.tsx
prototype/backend/: .env.example  README.md  pyproject.toml
prototype/backend/harness/: cli.py
prototype/backend/harness/api/: main.py  schemas.py
prototype/backend/harness/core/: data.py  llm.py  scoring.py
prototype/backend/harness/storage/: db.py
prototype/backend/tests/: test_api.py  test_scoring.py
request/: competition_design_brief.md  dev_architecture_plan.md  dev_workplan_scoring_leaderboard.md  harness_config_options.md  (+2 more)
site/: index.html
(+40 files in other folders)
