[project]
name = "defense-prompt-grader"
version = "0.1.0"
description = "2026 국방AI 프롬프트 경진대회 문제 B — 로컬 자동채점 시뮬레이터"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "scikit-learn>=1.5",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
grader = "grader.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grader", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
