[project]
name = "prompt-comp-backend"
version = "0.1.0"
description = "설비 정비주기 예측형 대회 — 프로토타입 채점 코어"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]   # httpx: FastAPI TestClient
# 실호출(P5)에서만 필요 — `uv sync --group llm`
llm = ["openai>=1.40"]

[tool.uv]
# 플랫 스크립트 레이아웃(빌드 대상 패키지 아님) — 의존성/venv만 관리
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# Pylance/Pyright가 이 프로젝트 venv를 인터프리터로 인식(fastapi 등 해석)
[tool.pyright]
venvPath = "."
venv = ".venv"
